# django-mountaineer

./: .gitignore  Makefile  README.md  pyproject.toml
backend/polls/: apps.py
backend/polls/migrations/: 0001_initial.py
django_mountaineer/: controllers.py  middleware.py
example/: README.md  docker-compose.yml  pyproject.toml
example/backend/: settings.py
example/backend/controllers/: home.py  login.py  test_login.py
example/example/: app.py  auth.py  cli.py  config.py  main.py  settings.py
example/example/apps/polls/: apps.py  models.py
example/example/apps/polls/migrations/: 0002_question_publicity_alter_choice_question.py
example/example/controllers/: home.py  layout.py  login.py  login.py.exclude
example/example/views/: package-lock.json  package.json  tailwind.config.js
example/example/views/src/: enums.ts  main.css
example/example/views/src/components/: utils.ts
example/example/views/src/home/: page.tsx
example/example/views/src/pages/: layout.py  layout.tsx
example/example/views/src/pages/home/: page.tsx
example/example/views/src/pages/index/: controller.py  page.tsx
example/example/views/src/pages/login/: controller.py  page.tsx  test_login.py
example/example/views/src/pages/style/: controller.py  page.tsx
example/frontend/: app.py  auth.py  cli.py  main.py
example/frontend/views/: package.json
example/frontend/views/app/home/: page.tsx
examples/01_simple_integration/: README.md  manage.py  pyproject.toml
examples/01_simple_integration/frontend/: app.py  cli.py  config.py  main.py
examples/01_simple_integration/frontend/controllers/: home.py
examples/01_simple_integration/frontend/views/: package-lock.json
examples/01_simple_integration/simpleintegration/: asgi.py  settings.py  urls.py  wsgi.py
examples/simple-integration/: .gitignore  README.md  pyproject.toml
examples/simple-integration/frontend/: app.py  cli.py  config.py
examples/simple-integration/frontend/controllers/: __init__.py  home.py
examples/simple-integration/frontend/views/: package-lock.json
examples/simple-integration/frontend/views/app/home/: page.tsx
frontend/: app.py  auth.py  config.py  controller.py  middleware.py
frontend/controllers/: home.py  login.py
frontend/views/: package.json
frontend/views/app/home/: controller.py  page.tsx
frontend/views/components/: utils.ts
src/django_mountaineer/: auth.py  controllers.py  middleware.py  test_controllers.py
