[tool.poetry]
name = "django-mountaineer"
version = "0.1.0"
description = ""
authors = ["Lee Edward Bound <leeward@boundcorp.net>"]
readme = "README.md"
packages = [
    { include = "django_mountaineer", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
mountaineer = "^0.6.0"
django = "^5.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^7.4.4"
ruff = "^0.1.14"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "example.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pyright]
exclude = ["**/example"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Disable print statements
select = ["E4", "E7", "E9", "F", "I001", "T201"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
markers = ["integration_tests: run longer-running integration tests"]
# Default pytest runs shouldn't execute the integration tests
addopts = "-m 'not integration_tests'"

[project]
name = "django_mountaineer"
version = "0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
runserver = "example_django_mountaineer.frontend.cli:runserver"
watch = "example_django_mountaineer.frontend.cli:watch"
build = "example_django_mountaineer.frontend.cli:build"
createdb = "example_django_mountaineer.frontend.cli:createdb"
