


[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Leeward Bound <leeward@boundcorp.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


mountaineer = "0.5.1"
django = "^5.0.0"
itsdangerous = "^2.2.0"
django-mountaineer = { path = "../", develop = true }
djantic2 = "*"


[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
runserver = "example.cli:runserver"
watch = "example.cli:watch"
build = "example.cli:build"
createdb = "example.cli:createdb"

[tool.mypy]
plugins = ["pydantic.mypy"]


