


[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Leeward Bound <leeward@boundcorp.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


mountaineer = "^0.5.0"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
runserver = "frontend.cli:runserver"
watch = "frontend.cli:watch"
build = "frontend.cli:build"
createdb = "frontend.cli:createdb"

[tool.mypy]
plugins = ["pydantic.mypy"]


